--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-md-6 py-3 py-md-0">
             <div class="card">
-              <img src="/images/bookPic.jpg" alt="" />
+              <img src="/images/bookPic.jpeg" alt="" />
             </div>
           </div>
           <div class="col-md-6 py-3 py-md-0">
@@ -158,7 +158,7 @@
          <!-- card -1 start -->
            <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="/images/place1.jpg" alt="">
+              <img src="/images/place1.jpeg" alt="">
               <div class="card-body">
                 <h3>Uttarakhand</h3>
                 <p>Uttarakhand is a remarkable place! where you can explore their natives.</p>
@@ -181,7 +181,7 @@
           <!-- card -2 start -->
            <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="/images/place2.jpg" alt="">
+              <img src="/images/place2.jpeg" alt="">
               <div class="card-body">
                 <h3>Kerala</h3>
                 <p>Kerala is a remarkable place! where you can explore their natives.</p>
@@ -204,7 +204,7 @@
           <!-- card -3 start -->
            <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="/images/place3.jpg" alt="">
+              <img src="/images/place3.jpeg" alt="">
               <div class="card-body">
                 <h3>Uganda</h3>
                 <p>Uganda is a remarkable place! where you can explore their natives.</p>
@@ -244,7 +244,7 @@
          <!-- card -1 start -->
            <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="/images/place4.jpg" alt="">
+              <img src="/images/place4.jpeg" alt="">
               <div class="card-body">
                 <h3>United Kingdom</h3>
                 <p>UK is a remarkable place! where you can explore their natives.</p>
@@ -267,7 +267,7 @@
           <!-- card -2 start -->
            <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="/images/place5.jpg" alt="">
+              <img src="/images/place5.jpeg" alt="">
               <div class="card-body">
                 <h3>United States</h3>
                 <p>US is a remarkable place! where you can explore their natives.</p>
@@ -290,7 +290,7 @@
           <!-- card -3 start -->
            <div class="col-md-4 py-3 py-md-0">
             <div class="card">
-              <img src="/images/place6.jpg" alt="">
+              <img src="/images/place6.jpeg" alt="">
               <div class="card-body">
                 <h3>Frence</h3>
                 <p>Frence is a remarkable place! where you can explore their natives.</p>
@@ -404,32 +404,32 @@
           
               <div class="col-md-4 py-3 py-md-0">
                  <div class="card">
-                 <img src="/images/g1.avif" alt="" height="280px">
+                 <img src="/images/g1.jpeg" alt="" height="280px">
                  </div>
              </div>
              <div class="col-md-4 py-3 py-md-0">
                  <div class="card">
-                 <img src="/images/g2.avif" alt="" height="280px">
+                 <img src="/images/g2.jpeg" alt="" height="280px">
                  </div>
              </div>
              <div class="col-md-4 py-3 py-md-0">
                  <div class="card">
-                 <img src="/images/g3.avif" alt="" height="280px">
+                 <img src="/images/g3.jpeg" alt="" height="280px">
                  </div>
              </div>
              <div class="col-md-4 py-3 py-md-0">
                  <div class="card">
-                 <img src="/images/g4.avif" alt="" height="280px">
+                 <img src="/images/g4.jpeg" alt="" height="280px">
                  </div>
              </div>
              <div class="col-md-4 py-3 py-md-0">
                  <div class="card">
-                 <img src="/images/g5.avif" alt="" height="280px">
+                 <img src="/images/g5.jpeg" alt="" height="280px">
                  </div>
              </div>
              <div class="col-md-4 py-3 py-md-0">
                  <div class="card">
-                 <img src="/images/g6.jpg" alt="" height="280px">
+                 <img src="/images/g6.jpeg" alt="" height="280px">
                  </div>
              </div>
       </div>
